add searchfunction in recyclerAdapter

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     //letter drawables with cirlce library
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    //search liveo for searching
+//    implementation 'com.github.rudsonlive:searchliveo:1.1.2'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
